Added map to locations tab

--- a/src/App.css
+++ b/src/App.css
@@ -9,3 +9,11 @@
 .react-bootstrap-table table {
   table-layout: auto;
 }
+
+.mapContainer {
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+}
